--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,14 @@ body {
   font-family: 'DM Sans', Times, serif;
 }
 
+h1 {
+  padding: 50px;
+  font-size: 50px;
+}
+
+p {
+  font-size: 20px;
+}
 .background {
   width: 100%;
   height: 100vh;
