--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,22 @@
 /* Import additional fonts from external sources */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 /* Define your font stack with fallback options */
 body {
-  font-family: 'DM Sans', Times, serif;
+  font-family: 'Merriweather', serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1 {
   padding: 50px;
-  font-size: 50px;
+  font-size: 160%;
 }
 
 p {
-  font-size: 20px;
+  font-size: 100%;
 }
 .background {
   width: 100%;
@@ -22,7 +26,7 @@ p {
 }
 
 .foreground {
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
   height: auto;
   position: relative;
@@ -36,7 +40,7 @@ p {
 }
 
 section {
-  height: 100vh;
+  height: 150vh;
   background-color: rgba(0, 0, 0, 0.1);
   outline: magenta solid 3px;
   text-align: center;
