--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 /* Import additional fonts from external sources */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
 
 /* Define your font stack with fallback options */
 body {
-  font-family: 'Merriweather', serif;
+  font-family: 'Roboto', 'Merriweather', serif;
   line-height: 1.6;
   margin: 0;
   padding: 0;
@@ -11,8 +13,9 @@ body {
 }
 
 h1 {
-  padding: 50px;
-  font-size: 160%;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  font-size: 200%;
 }
 
 p {
@@ -22,15 +25,15 @@ p {
   width: 100%;
   height: 100vh;
   position: relative;
-  outline: green solid 3px;
+  /* outline: green solid 3px; */
 }
 
 .foreground {
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
   height: auto;
   position: relative;
-  outline: red solid 3px;
+  /* outline: red solid 3px; */
 }
 
 .progress-bars {
@@ -40,11 +43,11 @@ p {
 }
 
 section {
-  height: 150vh;
-  background-color: rgba(0, 0, 0, 0.1);
-  outline: magenta solid 3px;
+  /* height: 150vh; */
+  background-color: rgba(255, 255, 255, 0.1);
+  /* outline: magenta solid 3px; */
   text-align: center;
-  color: black;
+  /* color: black; */
   /* padding: 1em;
   margin: 0 0 2em 0; */
   opacity: 0; 
